--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -171,6 +171,11 @@
 			"editors": "Editors",
 			"analysis": "Process mining",
 			"scheduler": "Scheduler"
+		},
+		"postpone": {
+			"text": "Postpone",
+			"single": "{days} Day",
+			"plural": "{days} Days"
 		}
 	},
 	"title": {
@@ -494,9 +499,11 @@
 	"confirm": {
 		"title": {
 			"areyousure": "Are you sure?",
-			"needReload": "Version updated"
+			"needReload": "Version updated",
+			"postpone": "Postpone"
 		},
 		"body": {
+			"postpone": "Postpone for {days} days(s)",
 			"needReload": "Application should be refreshed",
 			"deletefile": "File will be delete permanately, plase confirm",
 			"restartthendestroy": "Destroy this rehearsal and start a new one",
