--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -171,6 +171,11 @@
 			"editors": "编辑历史",
 			"analysis": "流程挖掘",
 			"scheduler": "执行计划"
+		},
+		"postpone": {
+			"text": "延后",
+			"single": "{days}天",
+			"plural": "{days}天"
 		}
 	},
 	"title": {
@@ -494,9 +499,11 @@
 	"confirm": {
 		"title": {
 			"areyousure": "你确定吗？",
-			"needReload": "版本更新"
+			"needReload": "版本更新",
+			"postpone": "延后执行"
 		},
 		"body": {
+			"postpone": "延后{days}天再看",
 			"needReload": "页面需要重新加载",
 			"deletefile": "文件将被永久删除，请确认",
 			"restartthendestroy": "放弃当前预演并重新启动一个",
