add: Cancel postpone confirm dialog content

--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -512,6 +512,7 @@
 		},
 		"body": {
 			"postpone": "Postpone for {days} days(s)",
+			"cancelpostpone": "Cancel postpone",
 			"needReload": "Application should be refreshed",
 			"deletefile": "File will be delete permanately, plase confirm",
 			"restartthendestroy": "Destroy this rehearsal and start a new one",
