--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -512,6 +512,7 @@
 		},
 		"body": {
 			"postpone": "延后{days}天再看",
+			"cancelpostpone": "取消延后",
 			"needReload": "页面需要重新加载",
 			"deletefile": "文件将被永久删除，请确认",
 			"restartthendestroy": "放弃当前预演并重新启动一个",
